Modified and test

--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-SECRET_KEY=mi-clave-super-secreta
-DATABASE_URI=mysql+pymysql://usuario:password@localhost/taller_mecanico
+SECRET_KEY=tu-clave-secreta-aqui
+DATABASE_URI=mysql+pymysql://usuario:clave@localhost:3306/taller_mecanico
